# Lachy-Launcher

./: .clang-format  .gitignore  CMakeLists.txt  README.md  README.txt
arg-parser/include/: argparser.h
arg-parser/include/argparser/: arg.h  arg_list.h  arg_parser.h
base64/include/: base64.h
base64/src/: base64.cpp
cll-telemetry/: CMakeLists.txt
cll-telemetry/include/cll/: buffered_event_batch.h  configuration.h  configuration_cache.h  configuration_manager.h  event.h  event_batch.h  event_compressor.h  event_manager.h  event_serializer.h  event_serializer_extensions.h  event_upload_step.h  event_uploader.h  file_configuration_cache.h  file_event_batch.h  memory_event_batch.h  multi_file_event_batch.h  task_with_delay_thread.h
cll-telemetry/src/: buffered_event_batch.cpp  buffered_event_batch_private.h  configuration.cpp  event_compressor.cpp  event_manager.cpp  event_serializer.cpp  event_serializer_extensions.cpp  event_uploader.cpp  file_configuration_cache.cpp  file_event_batch.cpp  json_utils.h  memory_event_batch.cpp  multi_file_event_batch.cpp  task_with_delay_thread.cpp
cll-telemetry/src/http/: curl_client.cpp  curl_client.h  curl_error.h  curl_request.cpp  curl_request.h  mock_http_client.cpp  mock_http_request.h
cll-telemetry/test/: CMakeLists.txt  buffered_event_batch.cpp  configuration.cpp  event_batch.cpp  event_batch.h  event_compressor.cpp  event_serializer.cpp  event_uploader.cpp  file_configuration_cache.cpp  file_event_batch.cpp  memory_event_batch.cpp  mock_http_client.cpp  multi_file_event_batch.cpp  task_with_delay_thread.cpp
cmake/: linux32.cmake
coremod/: CMakeLists.txt
coremod/include/: coremod.h
daemon-utils/client/: CMakeLists.txt
daemon-utils/client/include/daemon_utils/: daemon_launcher.h  launchable_service_client.h
daemon-utils/client/src/: daemon_launcher.cpp
daemon-utils/server/: CMakeLists.txt
daemon-utils/server/include/daemon_utils/: auto_shutdown_service.h
daemon-utils/server/src/: auto_shutdown_service.cpp
eglut/: CMakeLists.txt  LICENSE
eglut/include/: eglut.h  eglut_x11.h
eglut/src/: eglut.c  eglut_x11.c  eglutint.h  xinput.c  xinput.h
epoll-shim/include/sys/: epoll.h  signalfd.h  timerfd.h
epoll-shim/src/: CMakeLists.txt  epoll.c
ext/: glfw.cmake  imgui.cmake
file-picker/: CMakeLists.txt
file-picker/include/: file_picker.h  file_picker_factory.h
file-picker/src/: file_picker_cocoa.h  file_picker_cocoa.mm  file_picker_factory.cpp  file_picker_zenity.cpp  file_picker_zenity.h
file-util/: CMakeLists.txt
file-util/include/: EnvPathUtil.h  FileUtil.h
file-util/src/: EnvPathUtil.cpp  FileUtil.cpp
game-window/: CMakeLists.txt
game-window/include/: game_window.h  game_window_manager.h
game-window/src/: game_window_manager.cpp  joystick_manager_glfw.cpp  joystick_manager_glfw.h  joystick_manager_linux_gamepad.cpp  joystick_manager_linux_gamepad.h  window_eglut.cpp  window_eglut.h  window_glfw.cpp  window_glfw.h  window_manager_eglut.cpp  window_manager_eglut.h  window_manager_glfw.cpp  window_manager_glfw.h  window_with_linux_gamepad.cpp  window_with_linux_gamepad.h
lachy-coremods/: CMakeLists.txt
lachy-coremods/src/: MoreInfos.cc
libhybris/include/hybris/: binding.h  dlfcn.h  floating_point_abi.h  hook.h  properties.h
libhybris/src/: ctype.h  hooks.c  hooks_darwin_pthread_once.cpp  hooks_darwin_pthread_once.h  hooks_shm.h  logging.h  properties_p.h
libhybris/src/bionic/: bionic_asm.h  bionic_asm_x86.h
libhybris/src/jb/: linker_debug.h  linker_environ.h
libjnivm/include/: jni.h  jnivm.h
libjnivm/src/: jnivm.cpp
linux-gamepad/: CMakeLists.txt
linux-gamepad/cmake/: FindEvdev.cmake  FindUdev.cmake
linux-gamepad/include/gamepad/: callback_list.h  gamepad.h  gamepad_ids.h  gamepad_manager.h  gamepad_mapping.h  joystick.h  joystick_manager.h  joystick_manager_factory.h
linux-gamepad/src/: gamepad.cpp  gamepad_manager.cpp  gamepad_mapping.cpp  linux_joystick.cpp  linux_joystick.h  linux_joystick_manager.cpp  linux_joystick_manager.h
logger/include/: log.h
logger/src/: log.cpp
mcpelauncher-client/: CMakeLists.txt  CPackSettings.cmake
mcpelauncher-client/include/SLES/: OpenSLES.h  OpenSLES_Android.h  OpenSLES_AndroidConfiguration.h  OpenSLES_AndroidMetadata.h  OpenSLES_Platform.h
mcpelauncher-client/src/: JNIBinding.h  OpenSLESPatch.cpp  OpenSLESPatch.h  armhf_support.cpp  armhf_support.h  cll_upload_auth_step.cpp  cll_upload_auth_step.h  cpuid.cpp  cpuid.h  glfwlinkpatch.txt  hbui_patch.cpp  hbui_patch.h  main.cpp  minecraft_gamepad_mapping.h  native_activity.h  utf8_util.h  window_callbacks.cpp  window_callbacks.h  xbox_live_game_interface.cpp  xbox_live_game_interface.h  xbox_live_helper.cpp  xbox_live_helper.h
mcpelauncher-client/src/jni/: HardwareInformation.cpp  Http.cpp  InputManager.cpp  MainActivity.cpp  Misc.cpp  Store.cpp  XboxLive.cpp
mcpelauncher-common/include/mcpelauncher/: path_helper.h
mcpelauncher-common/src/: openssl_multithread.cpp  openssl_multithread.h  path_helper.cpp
mcpelauncher-core/: CMakeLists.txt  CPackSettings.cmake
mcpelauncher-core/include/mcpelauncher/: app_platform.h  core_mod_loader.h  crash_handler.h  hook.h  hybris_utils.h  minecraft_utils.h  minecraft_version.h  mod_loader.h  (+1 more)
mcpelauncher-core/src/: app_platform.cpp  core_mod_loader.cpp  crash_handler.cpp  hook.cpp  hybris_android_log_hook.cpp  hybris_utils.cpp  minecraft_utils.cpp  mod_loader.cpp  patch_utils.cpp
mcpelauncher-just/src/: main.cpp
mcpelauncher-server/: CMakeLists.txt  CPackSettings.cmake
mcpelauncher-server/src/: console_reader.cpp  console_reader.h  main.cpp  server_minecraft_app.h  server_properties.h  stub_key_provider.h  v8_platform.cpp  v8_platform.h
minecraft-symbols/src/: symbols.cpp  symbols_dlsym.cpp  symbols_internal.h
minecraft-symbols/tools/: process_headers.py
msa-daemon-client/: CMakeLists.txt
msa-daemon-client/include/msa/client/: account.h  compact_token.h  legacy_token.h  security_scope.h  service_client.h  service_launcher.h  token.h
msa-daemon-client/src/: service_client.cpp  token.cpp
osx-elf-header/include/: elf.h
(+136 files in other folders)
